--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,24 @@ a{
   border-bottom: 1px solid rgba(8,93,252) !important;
   box-shadow: 0 1px 0 0 rgba(8,93,252) !important;
 }
+
+.gallery{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-around;
+}
+
+.item{
+  width:30%;
+}
+
+.home-card{
+  max-width: 500px;
+  height: max-content;
+  margin:26px auto;
+}
+#toast-container{
+  top:30px !important; 
+  right:20px !important;
+  left:auto !important;
+}
